--- a/README
+++ b/README
@@ -1,2 +1,9 @@
-A collection of my dotfiles:
-- emacs
+This is my personal emacs configuration
+
+To initialize do the following on Mac OS:
+
+1. Navigate to your home directory (~/) on your machine
+2. git clone git@github.com:edmore/dotfiles.git
+3. cd dotfiles/
+4. Run ./init.rb
+
