Update of README file

--- a/README
+++ b/README
@@ -1,8 +1,6 @@
-This is my personal emacs configuration
+To setup your configuration do the following on Mac OS:
 
-To initialize do the following on Mac OS:
-
-1. Navigate to your home directory (~/) on your machine
+1. Navigate to the home directory (~/) on your machine
 2. git clone git@github.com:edmore/dotfiles.git
 3. cd dotfiles/
 4. Run ./setup.rb
