--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-To setup your configuration do the following on Mac OS:
+To setup your configuration do the following on Mac OS / Linux :
 
 1. Navigate to the home directory (~/) on your machine
 2. git clone git@github.com:edmore/dotfiles.git
