--- a/README
+++ b/README
@@ -1,8 +1,8 @@
 To setup:
 
 1. cd ~
-2. git clone git@github.com:edmore/dotfiles.git
-3. cd dotfiles/
+2. git clone git@github.com:edmore/dotemacs.git
+3. cd dotemacs/
 4. bin/setup.rb
 5. Launch GNU Emacs
 
