Update README for readonly access cloning

--- a/README
+++ b/README
@@ -1,7 +1,7 @@
 To setup:
 
 1. cd ~
-2. git clone git@github.com:edmore/dotemacs.git
+2. git clone git@github.com:edmore/dotemacs.git or git clone https://github.com/edmore/dotemacs.git
 3. cd dotemacs/
 4. bin/setup.rb
 5. Launch GNU Emacs
