--- a/README
+++ b/README
@@ -3,6 +3,8 @@ To setup:
 1. cd ~
 2. git clone git@github.com:edmore/dotemacs.git or git clone https://github.com/edmore/dotemacs.git
 3. cd dotemacs/
-4. bin/setup.rb
+4. bin/setup.sh or bin/setup.rb
 5. Launch GNU Emacs
 
+
+NB:  run `git pull` for updates
