--- a/README
+++ b/README
@@ -3,7 +3,7 @@ To setup:
 1. cd ~
 2. git clone git@github.com:edmore/dotemacs.git or git clone https://github.com/edmore/dotemacs.git
 3. cd dotemacs/
-4. bin/setup.sh or bin/setup.rb
+4. bin/setup.sh
 5. Launch GNU Emacs
 
 
